// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dropdown click option 1`] = `
<div class="o-dropdown o-hairline--top-bottom">
  <div class="o-dropdown__item"><span class="o-dropdown__title" style="color: rgb(51, 51, 51);"><div class="o-ellipsis">B</div></span></div>
  <div class="o-dropdown__item"><span class="o-dropdown__title" style="color: rgb(51, 51, 51);"><div class="o-ellipsis">B</div></span></div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px);">
    <transition-stub name="o-popup-slide-top" class="o-dropdown-item__content" style="z-index: 2011;">
      <div class="o-popup o-popup--top" style="transition-duration: 0.2s; display: none;">
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(51, 51, 51);">
          <div class="o-cell__title"><span>A</span></div>
        </div>
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(2, 120, 255);">
          <div class="o-cell__title"><span>B</span></div>
          <div class="o-cell__value"><i class="o-icon o-icon--check o-dropdown-item__icon" style="fill: #0278FF; width: 0.8rem; height: 0.8rem;">test-file-stub</i></div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px); display: none;">
    <!---->
  </div>
</div>
`;

exports[`dropdown close-on-click-outside 1`] = `
<div class="o-dropdown o-hairline--top-bottom">
  <div class="o-dropdown__item"><span class="o-dropdown__title o-dropdown__title--down" style="color: rgb(2, 120, 255);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown__item"><span class="o-dropdown__title" style="color: rgb(51, 51, 51);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px);">
    <div class="o-overlay o-fade-enter o-fade-enter-active" style="z-index: 2004; position: absolute; transition-duration: 0.2s;"></div>
    <transition-stub name="o-popup-slide-top" class="o-dropdown-item__content" style="z-index: 2005;">
      <div class="o-popup o-popup--top" style="transition-duration: 0.2s;">
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(2, 120, 255);">
          <div class="o-cell__title"><span>A</span></div>
          <div class="o-cell__value"><i class="o-icon o-icon--check o-dropdown-item__icon" style="fill: #0278FF; width: 0.8rem; height: 0.8rem;">test-file-stub</i></div>
        </div>
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(51, 51, 51);">
          <div class="o-cell__title"><span>B</span></div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px); display: none;">
    <!---->
  </div>
</div>
`;

exports[`dropdown destroy one item 1`] = `
<div class="o-dropdown o-hairline--top-bottom">
  <div class="o-dropdown__item"><span class="o-dropdown__title" style="color: rgb(51, 51, 51);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown__item"><span class="o-dropdown__title" style="color: rgb(51, 51, 51);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px); display: none;">
    <!---->
  </div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px); display: none;">
    <!---->
  </div>
</div>
`;

exports[`dropdown didn\`t find matched option 1`] = `
<div class="o-dropdown o-hairline--top-bottom">
  <div class="o-dropdown__item"><span class="o-dropdown__title" style="color: rgb(51, 51, 51);"><div class="o-ellipsis"></div></span></div>
  <div class="o-dropdown__item"><span class="o-dropdown__title" style="color: rgb(51, 51, 51);"><div class="o-ellipsis"></div></span></div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px); display: none;">
    <!---->
  </div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px); display: none;">
    <!---->
  </div>
</div>
`;

exports[`dropdown direction up 1`] = `
<div class="o-dropdown o-hairline--top-bottom">
  <div class="o-dropdown__item"><span class="o-dropdown__title o-dropdown__title--down" style="color: rgb(51, 51, 51);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown__item"><span class="o-dropdown__title o-dropdown__title--down" style="color: rgb(51, 51, 51);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown-item o-dropdown-item--up" style="z-index: 10; height: calc(100vh - 0px); transform: translate3d(0, -100%, 0); display: none;">
    <!---->
  </div>
  <div class="o-dropdown-item o-dropdown-item--up" style="z-index: 10; height: calc(100vh - 0px); transform: translate3d(0, -100%, 0); display: none;">
    <!---->
  </div>
</div>
`;

exports[`dropdown direction up 2`] = `
<div class="o-dropdown o-hairline--top-bottom">
  <div class="o-dropdown__item"><span class="o-dropdown__title" style="color: rgb(2, 120, 255);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown__item"><span class="o-dropdown__title o-dropdown__title--down" style="color: rgb(51, 51, 51);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown-item o-dropdown-item--up" style="z-index: 10; height: calc(100vh - 768px); transform: translate3d(0, -100%, 0);">
    <div class="o-overlay o-fade-enter-active o-fade-enter-to" style="z-index: 2008; position: absolute; transition-duration: 0.2s;"></div>
    <transition-stub name="o-popup-slide-bottom" class="o-dropdown-item__content" style="z-index: 2009;">
      <div class="o-popup o-popup--bottom" style="transition-duration: 0.2s;">
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(2, 120, 255);">
          <div class="o-cell__title"><span>A</span></div>
          <div class="o-cell__value"><i class="o-icon o-icon--check o-dropdown-item__icon" style="fill: #0278FF; width: 0.8rem; height: 0.8rem;">test-file-stub</i></div>
        </div>
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(51, 51, 51);">
          <div class="o-cell__title"><span>B</span></div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="o-dropdown-item o-dropdown-item--up" style="z-index: 10; height: calc(100vh - 768px); transform: translate3d(0, -100%, 0); display: none;">
    <!---->
  </div>
</div>
`;

exports[`dropdown disable close-on-click-outside 1`] = `
<div class="o-dropdown o-hairline--top-bottom">
  <div class="o-dropdown__item"><span class="o-dropdown__title o-dropdown__title--down" style="color: rgb(2, 120, 255);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown__item"><span class="o-dropdown__title" style="color: rgb(51, 51, 51);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px);">
    <div class="o-overlay o-fade-enter-active" style="z-index: 2006; position: absolute; transition-duration: 0.2s;"></div>
    <transition-stub name="o-popup-slide-top" class="o-dropdown-item__content" style="z-index: 2007;">
      <div class="o-popup o-popup--top" style="transition-duration: 0.2s;">
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(2, 120, 255);">
          <div class="o-cell__title"><span>A</span></div>
          <div class="o-cell__value"><i class="o-icon o-icon--check o-dropdown-item__icon" style="fill: #0278FF; width: 0.8rem; height: 0.8rem;">test-file-stub</i></div>
        </div>
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(51, 51, 51);">
          <div class="o-cell__title"><span>B</span></div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px); display: none;">
    <!---->
  </div>
</div>
`;

exports[`dropdown disable dropdown item 1`] = `
<div class="o-dropdown o-hairline--top-bottom">
  <div class="o-dropdown__item o-dropdown__item--disabled"><span class="o-dropdown__title" style="color: rgb(51, 51, 51);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px); display: none;">
    <!---->
  </div>
</div>
`;

exports[`dropdown show dropdown item 1`] = `
<div class="o-dropdown o-hairline--top-bottom">
  <div class="o-dropdown__item"><span class="o-dropdown__title o-dropdown__title--down" style="color: rgb(2, 120, 255);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown__item"><span class="o-dropdown__title" style="color: rgb(51, 51, 51);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px);">
    <div class="o-overlay o-fade-enter o-fade-enter-active" style="z-index: 2000; position: absolute; transition-duration: 0.2s;"></div>
    <transition-stub name="o-popup-slide-top" class="o-dropdown-item__content" style="z-index: 2001;">
      <div class="o-popup o-popup--top" style="transition-duration: 0.2s;">
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(2, 120, 255);">
          <div class="o-cell__title"><span>A</span></div>
          <div class="o-cell__value"><i class="o-icon o-icon--check o-dropdown-item__icon" style="fill: #0278FF; width: 0.8rem; height: 0.8rem;">test-file-stub</i></div>
        </div>
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(51, 51, 51);">
          <div class="o-cell__title"><span>B</span></div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px); display: none;">
    <!---->
  </div>
</div>
`;

exports[`dropdown show dropdown item 2`] = `
<div class="o-dropdown o-hairline--top-bottom">
  <div class="o-dropdown__item"><span class="o-dropdown__title" style="color: rgb(51, 51, 51);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown__item"><span class="o-dropdown__title o-dropdown__title--down" style="color: rgb(2, 120, 255);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px);">
    <transition-stub name="o-popup-slide-top" class="o-dropdown-item__content" style="z-index: 2001;">
      <div class="o-popup o-popup--top" style="transition-duration: 0s; display: none;">
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(2, 120, 255);">
          <div class="o-cell__title"><span>A</span></div>
          <div class="o-cell__value"><i class="o-icon o-icon--check o-dropdown-item__icon" style="fill: #0278FF; width: 0.8rem; height: 0.8rem;">test-file-stub</i></div>
        </div>
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(51, 51, 51);">
          <div class="o-cell__title"><span>B</span></div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px);">
    <div class="o-overlay o-fade-enter o-fade-enter-active" style="z-index: 2002; position: absolute; transition-duration: 0.2s;"></div>
    <transition-stub name="o-popup-slide-top" class="o-dropdown-item__content" style="z-index: 2003;">
      <div class="o-popup o-popup--top" style="transition-duration: 0.2s;">
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(2, 120, 255);">
          <div class="o-cell__title"><span>A</span></div>
          <div class="o-cell__value"><i class="o-icon o-icon--check o-dropdown-item__icon" style="fill: #0278FF; width: 0.8rem; height: 0.8rem;">test-file-stub</i></div>
        </div>
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(51, 51, 51);">
          <div class="o-cell__title"><span>B</span></div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`dropdown show dropdown item 3`] = `
<div class="o-dropdown o-hairline--top-bottom">
  <div class="o-dropdown__item"><span class="o-dropdown__title" style="color: rgb(51, 51, 51);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown__item"><span class="o-dropdown__title" style="color: rgb(51, 51, 51);"><div class="o-ellipsis">A</div></span></div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px);">
    <transition-stub name="o-popup-slide-top" class="o-dropdown-item__content" style="z-index: 2001;">
      <div class="o-popup o-popup--top" style="transition-duration: 0s; display: none;">
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(2, 120, 255);">
          <div class="o-cell__title"><span>A</span></div>
          <div class="o-cell__value"><i class="o-icon o-icon--check o-dropdown-item__icon" style="fill: #0278FF; width: 0.8rem; height: 0.8rem;">test-file-stub</i></div>
        </div>
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(51, 51, 51);">
          <div class="o-cell__title"><span>B</span></div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px);">
    <div class="o-overlay o-fade-leave o-fade-leave-active" style="z-index: 2002; position: absolute; transition-duration: 0.2s;"></div>
    <transition-stub name="o-popup-slide-top" class="o-dropdown-item__content" style="z-index: 2003;">
      <div class="o-popup o-popup--top" style="transition-duration: 0.2s; display: none;">
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(2, 120, 255);">
          <div class="o-cell__title"><span>A</span></div>
          <div class="o-cell__value"><i class="o-icon o-icon--check o-dropdown-item__icon" style="fill: #0278FF; width: 0.8rem; height: 0.8rem;">test-file-stub</i></div>
        </div>
        <div class="o-cell o-cell--clickable o-cell--large" style="color: rgb(51, 51, 51);">
          <div class="o-cell__title"><span>B</span></div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`dropdown title prop 1`] = `
<div class="o-dropdown o-hairline--top-bottom">
  <div class="o-dropdown__item"><span class="o-dropdown__title" style="color: rgb(51, 51, 51);"><div class="o-ellipsis">Title</div></span></div>
  <div class="o-dropdown__item"><span class="o-dropdown__title" style="color: rgb(51, 51, 51);"><div class="o-ellipsis">Title</div></span></div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px); display: none;">
    <!---->
  </div>
  <div class="o-dropdown-item o-dropdown-item--down" style="z-index: 10; height: calc(100vh - 0px); display: none;">
    <!---->
  </div>
</div>
`;

exports[`dropdown title slot 1`] = `
<div class="o-dropdown o-hairline--top-bottom">
  <van-dropdown-item></van-dropdown-item>
</div>
`;
